[package]
name = "spiffe-jwt-dropper"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
spire-api = "0.3.4"
spiffe = "0.6.5"
anyhow = "1.0.98"
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
